# genaitor

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  inference_code.py  package-lock.json  profile.py  pyproject.toml  references_data.csv  requirements.txt  setup.py  visualization_code.py  youtube_chat.db
api/: main.py
app/frontend/: index.html  package-lock.json  package.json
backend/: README.md
backend/api/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
examples/: Examples to Create.ini  _anomalies_detection.py  _archeologist.py  _astrophysicist_analyst.py  _configurator.py  _cv_analyzer.py  _energy_efficience.py  _environmental_energy.py  _finance_report_analyst.py  _machine_prevent.py  _market_players.py  _non_safe_tests.py  _pinn_hp_adjust.py  _ppt_pdf_analyzer.py  _products_recomndation.py  _quality_control.py  _quantum_ml.py  _rpg_master.py  _satellite_img_analyst.py  _sciml.py  _security_analyst.py  _soccer_assistant.py  _software.py  _space_debris.py  _trip_planner.py  _virtual_reality.py  _web_scraper.py  advanced_usage.py  agent_generator.py  anomalies_detection.py  astrophysicist_analyst.py  autism_assistant.py  cad_analyst.py  configurator.py  cv_analyzer.py  data_science_optimization.py  different_flows.py  educational_agent.py  email_marketing_generator.py  finance_assistant.py  (+23 more)
examples/files/: agro_analysis.txt  anomaly_detection_1.py  anomaly_detection_2.py  final_proposal.txt  numerical_modeling.py  paper_links.txt  pinn_modeling.py  problem_analysis.txt  scraper_generation_1.py  scraper_generation_2.py  soil_moisture_analysis.txt  time_series_analysis_1.py  time_series_analysis_3.py
examples/media_chat/: chat.py
examples/results/: README.md  inference_code.py  requirements.txt  training_code.py  visualization_code.py
frontend/genaitor-frontend/: .eslintignore  Dockerfile  README.md  env.example  package-lock.json  package.json  (+1 more)
genaitor/: clean_response.py  llama_agent.py  request_helper.py
genaitor-pre-release/: package-lock.json  package.json
genaitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genaitor_server/: app.py  cert.pem  config.py  key.pem  llama_agent.py  request_helper.py  requirements.txt  run_api.sh  swagger_config.yml
pinneaple/: main.py  pinneaple.py
pocs/: anomalies_detection.py  app.py  autism_assistant.py  cad_analyst.py  configurator.py  email_marketing_generator.py  pinns.py  ppt_pdf_analyzer.py  satellite_img_analyst.py  sciml.py  security_analyst.py  temporal_series_predictor.py
preset_agents/: preset_components.py
presets/: agents.py  providers.py  tasks.py  tasks_objects.py
projects/: agents.py  app.py  config.py  llama_agent.py  utils.py  video_utils.py
routes/: get_key.py  init_db.py  pinneaple.py  stardust.py  yt_chat.py
server/: Dockerfile  app.py  config.py  llama_agent.py  requirements.txt  run_api.sh
src/: papers_urls.json  styles.css
tests/: test1.py  test2.py  test_agent.py  test_base.py  test_fine_tuning.py  test_llm.py  test_orchestrator.py  test_text_splitter.py
utils/: agents.py  utils.py
(+260 files in other folders)
