[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genaitor"
version = "0.1.0"
description = "A platform for AI Agents and AI Agents products generation."
authors = [{ name = "Yan Barros", email = "yanbarrosyan@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "google-generativeai>=0.3.0",
    "transformers>=4.30.0",
    "pdfplumber>=0.9.0",
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
    "pandas>=1.5.0",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "moviepy>=1.0.3",
    "SpeechRecognition>=3.8.1",
    "pydub>=0.25.1",
    "langchain>=0.0.300",
    "langchain-community>=0.0.10",
    "requests>=2.31.0",
    "absl-py>=1.0.0",
    "grpcio>=1.50.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tenacity>=8.0.0",
    "pillow>=10.4.0",
    "pandas>=2.2.3",
    "dotenv>=0.9.9",
    "SQLAlchemy>=2.0.40",
    "PyPDF2>=3.0.1",
    "python-pptx==1.0.2",
    "torch>=2.2.1",
    "datasets>=3.3.2",
    "trl>=0.16.1",
    "peft>=0.15.1",
    "rasterio>=1.4.3",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "google-genai>=1.11.0",
    "google-generativeai>=0.8.4",
    "absl-py>=2.1.0",
    "tenacity>=9.0.0",
    "streamlit>=1.44.0",
    "tifffile>=2025.3.13",
    "opencv-python>=4.11.0.86",
    "ezdxf>=1.4.0",
    "numpy>=1.26.4",
    "h5py>=3.13.0",
    "netCDF4>=1.7.2",
    "astropy>=7.0.1",
    "astropy-iers-data>=0.2025.3.31.0.36.18",
    "trimesh>=4.6.4",
    "avro>=1.12.0",
    "scipy>=1.15.2",
    "open3d>=0.19.0",
    "aiohttp>=3.11.13",
    "fastapi>=0.115.11",
    "pytesseract>=0.3.13",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "SpeechRecognition>=3.14.2",
    "moviepy>=2.1.2",
    "tiktoken>=0.9.0",
    "openai>=1.66.3",
    "anthropic>=0.49.0",
]

[tool.setuptools]
package-dir = { "" = "genaitor" }
[tool.setuptools.packages.find]
where = ["genaitor"]